--- a/scss/main/_editor.scss
+++ b/scss/main/_editor.scss
@@ -11,14 +11,14 @@
     .textbox{
         grid-area: textbox;
         background-color: $text-box-color;
-        box-shadow: 0 0 5px 2px $text-box-shadow-color;
+        box-shadow: 0 0 5px 0 $text-box-shadow-color;
         width: 70%;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         padding: 1em;
         border-radius: 1em;
-        min-width: 500px;
+        // min-width: 500px;
         margin-top: 15px;
         #words{
             color:$word-count-color;
