--- a/scss/main/_left_bar.scss
+++ b/scss/main/_left_bar.scss
@@ -5,10 +5,11 @@
     grid-area: left_bar;
     display: flex;
     justify-content: center;
-    height: 100vh;
-    position: relative;
+    height: 747.8px;
+    position: absolute;
     left:0;
     z-index: 3;
+    width: 50px;
     transition: all ease 500ms;
     
     .hamburger{
