--- a/scss/main/_left_pane.scss
+++ b/scss/main/_left_pane.scss
@@ -12,7 +12,6 @@ $animation_time: 500ms;
     font-family: 'Roboto', sans-serif;
     border: 10%;
     align-items: center;
-    height: 100vh;
     position: absolute;
     left: -300px;
     width: 300px;
