--- a/scss/main/_media_queries.scss
+++ b/scss/main/_media_queries.scss
@@ -24,7 +24,10 @@
         text-align: center;
     }
     body{
-        background:#e2eafc;
+        background-image: url('../../images/mobile_login.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: top;
     }
 }
 
